Finish user edit, update, index, and destroy actions

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,4 +1,27 @@
 marlena:
-  name: marlena
+  name: Marlena Orzechowska
   email: marlena.orzechowska@ikaevents.pl
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+lukasz:
+  name: Lukasz Targanski
+  email: lukasz.targanski@gmail.com
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+
+malory:
+  name: Malory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
